--- a/internal/Makefile
+++ b/internal/Makefile
@@ -11,7 +11,7 @@ test-race:
 # ====== BENCHMARKS ======
 
 bench:
-	go test -v -bench=. -benchmem -benchtime=1s -count=1 ./...
+	go test  -bench=. -benchmem -benchtime=1s -count=1 ./...
 
 bench-short:
 	go test -bench=. -benchmem -benchtime=100ms -count=1 ./...
